[package]
name = "crlite-reencode"
version = "0.1.0"
edition = "2021"
publish = false
description = "Re-encode CRLite clubcard filters in an upki cache directory to V4."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clubcard-crlite = "0.4"
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
